# Django_vod

./: db.sqlite3  pyproject.toml
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py
bookmark/: admin.py  models.py  views.py
bookmark/migrations/: 0001_initial.py
config/: settings.py  urls.py
day01/: pyproject.toml
day01/config/: settings.py  urls.py
day01/templates/: gugu.html  movies.html
member/: views.py
templates/: blog_list.html  book_list.html  bookmark_detail.html  bookmark_list.html
